# delievery_time_predict

./: .gitignore  Dockerfile  Makefile  README.md  app.py  data.dvc  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements-dockers.txt  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci_cd.yaml
data/cleaned/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore  swiggy.csv.dvc
deploy/scripts/: install_dependencies.sh  start_docker.sh
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore
notebooks/: Food_Delivery_Data_Cleaning.ipynb  Food_Delivery_Final_Estimator.ipynb  Food_Delivery_LGBM_HP_Tuning.ipynb  Food_Delivery_Model_Selection.ipynb  Food_Delivery_Stacking_Regressor_HP_Tuning.ipynb  Food_Delivery_XGB_HP_Tuning.ipynb
scripts/: data_clean_utils.py  promote_model_to_prod.py  sample_predictions.py
src/data/: data_cleaning.py  data_preparation.py
src/features/: data_preprocessing.py
src/model/: evaluation.py  register_model.py  train.py
tests/: test_model_perf.py  test_model_registry.py
