[project]
name = "delievery-time-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiobotocore>=3.8.0",
    "aiohappyeyeballs>=2.7.1",
    "aiohttp>=3.14.1",
    "aiohttp-retry>=2.9.1",
    "aioitertools>=0.13.0",
    "aiosignal>=1.4.0",
    "alembic>=1.18.5",
    "amqp>=5.3.1",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyio>=4.14.2",
    "appdirs>=1.4.4",
    "asttokens>=3.0.2",
    "asyncssh>=2.24.0",
    "atpublic>=7.0.0",
    "attrs>=26.1.0",
    "backoff>=2.2.1",
    "billiard>=4.2.4",
    "blinker>=1.9.0",
    "boto3>=1.43.46",
    "botocore>=1.43.46",
    "cachetools>=7.1.4",
    "celery>=5.6.3",
    "certifi>=2026.6.17",
    "cffi>=2.1.0",
    "charset-normalizer>=3.4.9",
    "click>=8.4.2",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1.2",
    "click-repl>=0.3.0",
    "cloudpickle>=3.1.2",
    "colorama>=0.4.6",
    "comm>=0.2.3",
    "configobj>=5.0.9",
    "contourpy>=1.3.3",
    "cryptography>=48.0.1",
    "cycler>=0.12.1",
    "dacite>=1.6.0",
    "dagshub>=0.7.1",
    "dagshub-annotation-converter>=0.2.0",
    "databricks-sdk>=0.121.0",
    "dataclasses-json>=0.6.7",
    "debugpy>=1.8.21",
    "decorator>=5.3.1",
    "deprecated>=1.3.1",
    "dictdiffer>=0.10.0",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "dnspython>=2.8.0",
    "docker>=7.2.0",
    "dpath>=2.2.0",
    "dulwich>=1.2.12",
    "dvc[s3]>=3.67.1",
    "dvc-data>=3.18.3",
    "dvc-http>=2.32.0",
    "dvc-objects>=5.2.0",
    "dvc-render>=1.0.2",
    "dvc-s3>=3.3.0",
    "dvc-studio-client>=0.23.0",
    "dvc-task>=0.40.2",
    "email-validator>=2.3.0",
    "entrypoints>=0.4",
    "executing>=2.2.1",
    "fastapi>=0.139.2",
    "fastapi-cli>=0.0.32",
    "filelock>=3.31.0",
    "flask>=3.1.3",
    "flatten-dict>=0.5.0",
    "flufl-lock>=9.1.0",
    "fonttools>=4.63.0",
    "frozenlist>=1.8.0",
    "fsspec>=2026.6.0",
    "funcy>=2.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.52",
    "google-auth>=2.56.0",
    "gql>=4.0.0",
    "grandalf>=0.8",
    "graphene>=3.4.3",
    "graphql-core>=3.2.11",
    "graphql-relay>=3.2.0",
    "greenlet>=3.5.3",
    "gto>=1.10.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.8.0",
    "httpx>=0.28.1",
    "hydra-core>=1.3.4",
    "idna>=3.18",
    "importlib-metadata>=9.0.0",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "iterative-telemetry>=0.0.10",
    "itsdangerous>=2.2.0",
    "jedi>=0.20.0",
    "jinja2>=3.1.6",
    "jmespath>=1.1.0",
    "joblib>=1.5.3",
    "jupyter-client>=8.9.1",
    "jupyter-core>=5.9.1",
    "kiwisolver>=1.5.0",
    "kombu>=5.6.2",
    "lightgbm>=4.7.0",
    "lxml>=6.1.1",
    "mako>=1.3.12",
    "markdown>=3.10.2",
    "markdown-it-py>=4.2.0",
    "markupsafe>=3.0.3",
    "marshmallow>=3.26.2",
    "matplotlib>=3.11.1",
    "matplotlib-inline>=0.2.2",
    "mdurl>=0.1.2",
    "missingno>=0.5.2",
    "mlflow>=3.14.0",
    "mlflow-skinny>=3.14.0",
    "multidict>=6.7.1",
    "mypy-extensions>=1.1.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "opentelemetry-semantic-conventions>=0.65b0",
    "optuna>=4.9.0",
    "orjson>=3.11.9",
    "packaging>=26.2",
    "pandas>=2.3.3",
    "parso>=0.8.7",
    "pathspec>=1.1.1",
    "pathvalidate>=3.3.1",
    "patsy>=1.0.2",
    "pillow>=12.3.0",
    "platformdirs>=4.10.1",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.5.2",
    "protobuf>=6.33.6",
    "psutil>=7.2.2",
    "pure-eval>=0.2.3",
    "pyarrow>=24.0.0",
    "pyasn1>=0.6.4",
    "pyasn1-modules>=0.4.2",
    "pycparser>=3.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pydot>=4.0.1",
    "pygit2>=1.19.3",
    "pygments>=2.20.0",
    "pygtrie>=2.5.0",
    "pyparsing>=3.3.2",
    "pytest>=9.1.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "requests>=2.34.2",
    "requests-toolbelt>=1.0.0",
    "rich>=15.0.0",
    "rsa>=4.9.1",
    "ruamel-yaml>=0.19.1",
    "ruamel-yaml-clib>=0.2.15",
    "s3fs>=2026.6.0",
    "s3transfer>=0.19.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "scmrepo>=3.6.2",
    "seaborn>=0.13.2",
    "semver>=3.0.4",
    "setuptools>=83.0.0",
    "shellingham>=1.5.4",
    "shortuuid>=1.0.13",
    "shtab>=1.8.1",
    "six>=1.17.0",
    "smmap>=5.0.3",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.51",
    "sqlparse>=0.5.5",
    "sqltrie>=0.11.2",
    "stack-data>=0.6.3",
    "starlette>=1.3.1",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
    "threadpoolctl>=3.6.0",
    "tomlkit>=0.15.1",
    "tornado>=6.5.7",
    "tqdm>=4.69.0",
    "traitlets>=5.15.1",
    "treelib>=1.8.0",
    "typer>=0.27.0",
    "typing-extensions>=4.16.0",
    "typing-inspect>=0.9.0",
    "tzdata>=2026.3",
    "urllib3>=2.7.0",
    "uvicorn>=0.51.0",
    "vine>=5.1.0",
    "voluptuous>=0.16.0",
    "waitress>=3.0.2",
    "watchfiles>=1.2.0",
    "wcwidth>=0.8.2",
    "websockets>=16.1.1",
    "werkzeug>=3.1.8",
    "wrapt>=2.2.2",
    "xgboost>=3.2.0",
    "yarl>=1.24.2",
    "zc-lockfile>=4.0",
    "zipp>=4.1.0",
]
